# faucet-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  entrypoint.sh  faucet.toml  justfile  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cd.yml  ci.yml  cron-zizmor.yml  zizmor.yml
docs/: pow.md
src/: batcher.rs  hex.rs  l1.rs  l2.rs  macros.rs  main.rs  pow.rs  seed.rs  settings.rs
src/.github/workflows/: ci.yml
utils/: solver.py
utils/html-solver/: Cargo.toml
utils/html-solver/src/: main.rs
utils/html-solver/static/: index.html  solver.js
