[package]
name = "alpen-faucet"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [".", "utils/html-solver"]

[dependencies]
alloy = { version = "0.9.1", features = [
  "std",
  "rpc-client-ws",
  "network",
  "signers",
  "signer-local",
  "providers",
  "rpc-types",
] }
arrayvec = "0.7.6"
axum = { version = "0.7.9", features = ["http2"] }
axum-client-ip = "0.6.0"
axum-macros = "0.4.2"
bdk_esplora = { version = "0.19.0", features = [
  "async-https",
  "async-https-rustls",
], default-features = false }
bdk_wallet = { version = "1.0.0-beta.5", features = ["rusqlite"] }
chrono = { version = "0.4.39", default-features = false, features = ["now"] }
colored = "2.2.0"
concurrent-map = "5.0.37"
config = { version = "0.15.7", features = ["toml"], default-features = false }
kanal = "0.1.0-pre8"
parking_lot = "0.12.3"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha2 = { version = "0.10.8", features = ["asm", "loongarch64_asm"] }
terrors = "0.3.2"
tokio = { version = "1.41.0", features = [
  "macros",
  "net",
  "parking_lot",
  "rt-multi-thread",
  "time",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "parking_lot",
] }

[profile.release]
opt-level = 3     # Optimized for speed, use z for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
