[package]
name = "alpen-faucet"
version = "0.5.1"
edition = "2021"

[workspace]
resolver = "2"
members = [".", "utils/html-solver"]

[workspace.dependencies]
tokio = "1.46.1"

[dependencies]
alloy = { version = "0.13.0", features = [
  "std",
  "rpc-client-ws",
  "network",
  "signers",
  "signer-local",
  "providers",
  "rpc-types",
] }
arrayvec = "0.7.6"
axum = { version = "0.8.1", features = ["http2"] }
axum-client-ip = "1.1.3"
axum-macros = "0.5.0"
bdk_esplora = { version = "0.20.1", features = [
  "async-https-rustls",
  "tokio",
], default-features = false }
bdk_wallet = { version = "1.2.0", features = ["rusqlite"] }
bip39 = "2.2.0"
chrono = { version = "0.4.41", default-features = false, features = ["now"] }
colored = "3.0.0"
concurrent-map = "5.0.37"
config = { version = "0.15.11", features = ["toml"], default-features = false }
kanal = "0.1.1"
parking_lot = "0.12.4"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = { version = "0.10.9", features = ["asm", "loongarch64_asm"] }
shrex = { git = "https://github.com/alpenlabs/alpen", features = [
  "axum",
  "serde",
] }
terrors = "0.3.3"
tokio = { workspace = true, features = [
  "macros",
  "net",
  "parking_lot",
  "rt-multi-thread",
  "time",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "parking_lot",
] }

[dev-dependencies]
approx = "0.5.1"

[profile.release]
opt-level = 3     # Optimized for speed, use z for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
