[package]
name = "html-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.0"
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.13", features = ["server"] }
tokio = { workspace = true, features = ["rt", "macros"] }
