[package]
name = "html-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.11.1"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["server"] }
tokio = { workspace = true, features = ["rt", "macros"] }
